# scipion-em-warp

./: CHANGES.txt  MANIFEST.in  README.md  README.rst  boxNetModelClass.py  pyproject.toml  requirements.txt  setup.py  todo.txt
.github/workflows/: publish_and_tag.yml
warp/: __init__.py  bibtex.py  constants.py  protocols.conf  utils.py  wizards.py
warp/protocols/: __init__.py  protocol_base.py  protocol_deconv_2d.py  protocol_deconv_3d.py  protocol_deconv_mics.py  protocol_deconv_tomo.py  protocol_deconv_ts.py  protocol_m_high_resolution_refinements.py  protocol_motion_ctf.py  protocol_tomoReconstruct.py  protocol_tomo_export_particles.py  protocol_tsCTFEstimation_tomoReconstruct.py  protocol_ts_ctfEstimation.py  protocol_ts_defocus_hand.py  protocol_ts_motion_ctf.py  protocol_ts_template_match.py
warp/tests/: __init__.py  protocols_tomo_tests.py  test_protocols.py  test_protocols_tomo.py  test_tomo.py
